graph update+cache

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 
-.App {
-  background-color: #282c34;
+body {
+  background-color: #131d31;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
