--- a/client/src/Layout.css
+++ b/client/src/Layout.css
@@ -1,13 +1,16 @@
 
-body {
-  background-color: #131d31;
+.layout {
+  
+  background-color: #333D79FF;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: grid;
+  grid-template-columns: 50% 50% ;
+  grid-template-rows: 50% 50%;
+  
+  color: #FAEBEFFF;
+}
+.graph{
+  grid-column: 1/3;
 }
 
 
