--- a/client/src/Layout.css
+++ b/client/src/Layout.css
@@ -1,16 +1,21 @@
 
 .layout {
-  
+  position: absolute;
   background-color: #333D79FF;
-  min-height: 100vh;
   display: grid;
   grid-template-columns: 50% 50% ;
   grid-template-rows: 50% 50%;
-  
   color: #FAEBEFFF;
+  left:0;
+  right:0;
+  bottom:0;
+  top:0;
+
+
 }
 .graph{
   grid-column: 1/3;
+  
 }
 
 
