--- a/client/src/LiveData.css
+++ b/client/src/LiveData.css
@@ -1,4 +1,5 @@
 .liveData{
+    position: relative;
     margin: 3%;
     border-radius: 25px;
     display: block;
@@ -6,5 +7,7 @@
     text-align: center;
     font-size: 100%;
     font-weight: 100%;
-    
+    resize: both;
+    overflow:auto;
+    box-sizing: border-box;
 }
