--- a/client/src/Layout.css
+++ b/client/src/Layout.css
@@ -1,11 +1,17 @@
 
 .layout {
-  position: absolute;
+  
   background-color: #333D79FF;
   display: grid;
   grid-template-columns: 50% 50% ;
   grid-template-rows: 50% 50%;
   color: #FAEBEFFF;
+  height: 100%;
+  margin:0;
+  left:0;
+  right:0;
+  bottom:0;
+  top:0;
  
 
 
